syntax = "proto3";

package user;

option go_package = "protobuf/user";

service UserService {
    rpc Login (LoginRequest) returns (LoginResponse) {}
    rpc Register (RegisterRequest) returns (RegisterResponse) {}
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string status = 1;
    int64 timestamp = 2;
    LoginResult result = 3;
}

message LoginResult {
    string token = 1;
    string username = 2;
    string userID = 3;
}

message RegisterRequest {
    string username = 1;
    string password = 2;
}

message RegisterResponse {
    string status = 1;
    int64 timestamp = 5;
    RegistrationResult result = 3;
}

message RegistrationResult {
    string username = 1;
    string password = 2;
    string userID = 3;
}
